テキスト変更

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 </head>
 <body>
-    <h1>Gulp!!</h1>
+    <h1>Gulp!!Mack HTML!!</h1>
 </body>
 </html>
