--- a/20190119iphone6navScrollNo/index.html
+++ b/20190119iphone6navScrollNo/index.html
@@ -27,12 +27,14 @@
 	top: 0;
 	right: 0;
 	z-index: 999;
+	background-color: #fff;
 }
 .closeBtn {
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 999;
+	background-color: #fff;
 }
 </style>
 </head>
@@ -210,24 +212,24 @@
 <script>
 var scrollPosition = 0;
 $('#open').click(function() {
-    // スクロール量を記憶
-    scrollPosition = $(window).scrollTop();
-    $('.nav').show(); // ナビ表示
-    $('.js-heightWpaer').addClass('wrap');
-    // wrapperに画面の高さを充てる
-    $('.js-heightWpaer').css('height', $(window).height() + 'px');
-    // スクロール量分コンテンツにマージンマイナスを入れる
-    $('.content').css('margin-top', ( scrollPosition * -1 ) + 'px');;
+	// スクロール量を記憶
+	scrollPosition = $(window).scrollTop();
+	$('.nav').show(); // ナビ表示
+	$('.js-heightWpaer').addClass('wrap');
+	// wrapperに画面の高さを充てる
+	$('.js-heightWpaer').css('height', $(window).height() + 'px');
+	// スクロール量分コンテンツにマージンマイナスを入れる
+	$('.content').css('margin-top', ( scrollPosition * -1 ) + 'px');;
 });
 
 $('#close').click(function() {
-    // ナビ非表示
-    $('.nav').hide();
-    $('.js-heightWpaer').removeClass('wrap');
-    $('.js-heightWpaer').css('height', '');
-    $('.content').css('margin-top', '');
-    // スクロールを開いた場所に戻す
-    $(window).scrollTop(scrollPosition);
+	// ナビ非表示
+	$('.nav').hide();
+	$('.js-heightWpaer').removeClass('wrap');
+	$('.js-heightWpaer').css('height', '');
+	$('.content').css('margin-top', '');
+	// スクロールを開いた場所に戻す
+	$(window).scrollTop(scrollPosition);
 });
 </script>
 </body>
